feat: 캐러셀 컴포넌트 마크업 및 스타일링 완성
- index.html : 컴포넌트를 조립하여 캐러셀 구조 마크업 구성
- main.css : carousel.css import
- title-link.css : 정렬 속성 수정 (justify-content: center;)
- carousel.css : 캐러셀 및 페이지네이션 스타일링

--- a/week03/src/styles/components/title-link.css
+++ b/week03/src/styles/components/title-link.css
@@ -2,11 +2,12 @@
 .carousel__header {
   display: inline-flex;
   flex-direction: row-reverse; /* 아이콘 | 텍스트 | 화살표 이런 순서로 오도록 설정 */
-  justify-content: start;
+  justify-content: center;
   align-items: flex-end;
   gap: 6px;
   padding: 5px 10px;
   border-radius: 100px;
+  width: 136px;
 
   &:hover {
     background-color: var(--background-muted);
