style: 캐릭터 이미지가 잘리지 않도록 position 수정

--- a/week03/src/styles/components/content-link.css
+++ b/week03/src/styles/components/content-link.css
@@ -38,11 +38,11 @@ body {
     }
 
     .card__image--background {
-      top: 8px;
+      top: 12px;
     }
 
     .card__image--character {
-      top: -4px;
+      position: relative;
     }
   }
 
