feat: 캐러셀에서 콘텐츠 2개씩 보이도록 기본 슬라이드 기능 구현

--- a/week03/src/styles/components/nav-button.css
+++ b/week03/src/styles/components/nav-button.css
@@ -1,11 +1,15 @@
 /* 탐색 버튼 컴포넌트 */
 .carousel__controls {
+  position: relative;
+    z-index: 20;
+
   .carousel__button {
     border: 1px solid var(--colour-grey-8);
     width: 30px;
     height: 30px;
     border-radius: 50%;
     padding: 0.25rem;
+    pointer-events: auto;
 
     svg {
       display: block;
