feat: 홈 화면과 타이머 화면의 UI 수정

--- a/week05/src/styles/style.css
+++ b/week05/src/styles/style.css
@@ -5,9 +5,20 @@
   box-sizing: border-box;
 }
 
+.app {
+  border: 1px solid #eee;
+  border-radius: 10px;
+  padding: 5.5rem 4.5rem;
+  background-color: #fffdf7;
+  min-block-size: 520px;
+  inline-size: 30rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #fffdf7;
   color: #333;
   min-block-size: 100vh;
   display: flex;
@@ -35,8 +46,8 @@ button:disabled {
   align-items: center;
   justify-content: center;
   text-align: center;
-  max-inline-size: 25rem;
   inline-size: 100%;
+  block-size: 100%;
   gap: 2rem;
 }
 
@@ -102,6 +113,10 @@ button:disabled {
   opacity: 1;
 }
 
+.start__button:hover {
+  background-color: #6aa6e3;
+}
+
 /* 타이머 화면 */
 .timer__wrapper {
   display: flex;
@@ -141,6 +156,8 @@ button:disabled {
 }
 
 .quiz__option {
+  flex: 1 1 calc(50% - 1rem);
+  text-align: center;
   background-color: #e2f0ff;
   padding: 0.6rem 1rem;
   border-radius: 8px;
